--- a/scss/layout/charts.scss
+++ b/scss/layout/charts.scss
@@ -2,7 +2,6 @@
     height: auto;
 
     [class*="-container"] {
-        padding: 0px 15px;
         border-bottom: 1px solid lightgray;
     }
 
@@ -12,7 +11,9 @@
 }
 
 .line-container {
+    height: auto;
     width: 100%;
+    position: relative;
 }
 .bar-container {
     width: 100%;
@@ -36,6 +37,11 @@
     border-radius: 15px;
     padding: 5px;
     text-align: center;
+}
+
+.line-chart {
+    width: 90vw;
+    margin: auto;
 }
 
 @media screen and (min-width: 768px) {
